# qstream

./: .env.install.example  .env.local.example  .env.tunnel.example  .gitignore  AGENTS.md  PROJECT_VISION.md  README.md  TODO.md
backend/: .env.example  Cargo.toml
backend/src/: main.rs  schema.sql  schema_reset.sql
deploy/templates/: caddy.production.Caddyfile  caddy.tunnel.Caddyfile  qstream-backend.service  qstream-journald.conf
docs/: remote-server-operations.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: ConfirmButton.svelte  LoginPanel.svelte  Notifications.svelte  SessionDetailsFields.svelte  Spinner.svelte  StreamOverlay.svelte
scripts/: deploy-production.sh  install-remote-caddy.sh  run-dev-tunnel.sh
